Fix menu alignment.

--- a/css/stat.scss
+++ b/css/stat.scss
@@ -76,7 +76,6 @@ $menu-font-weight: bold;
 		}
 	.block-menu {
 		display: flex;
-		justify-content: flex-end;
 		width: 100%;
 			ul {
 				text-align: center;
